@@ -48,6 +48,12 @@ jobs:
     inputs:
       targetType: 'inline'
       script: |
+        authorName=$(git log -1 --pretty=format:'%an <%ae>')
+        authorEmail=$(git log -1 --pretty=format:'%an <%ae>')
+        git config --global user.email "${authorEmail}"
+        git config --global user.name "${authorName}"
+        git config --list
+        
         git fetch origin $(repositoryBranch) -q
         git checkout FETCH_HEAD -q
         git checkout -b update-package-for-$(releaseVersion) -q
@@ -74,9 +80,8 @@ jobs:
         fi
         
         perl -i -pe's/releases\/download\/[0-9a-zA-Z\.].+\//releases\/download\/$(Build.BuildId)\//' Package.swift
-        
-        git add Package.swift
         author=$(git log -1 --pretty=format:'%an <%ae>')
+        git add Package.swift
         git commit -a -m "Updating MSAL framework checksum & url for $(releaseVersion) [skip ci]" -q --author="${author}"
         git checkout $(repositoryBranch) -q
         git merge update-package-for-$(releaseVersion) -q
